<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:gravity="center_vertical"
    android:paddingTop="8dp"
    android:paddingBottom="8dp">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="100dp"
            android:id="@+id/team_member_portrait"
            android:src="@drawable/speaker_icon"
            android:layout_marginRight="15dp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:stretchColumns="1"
        android:layout_gravity="left"
        android:shrinkColumns="*">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:id="@+id/textView2"
                style="@style/ArticleText"
                android:layout_column="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Text"
                style="@style/ArticleText"
                android:id="@+id/team_member_name"
                android:layout_column="1" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nickname"
                android:id="@+id/textView3"
                android:layout_column="0"
                style="@style/ArticleText"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:id="@+id/team_member_nickname"
                android:layout_column="1"
                style="@style/ArticleText"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:id="@+id/textView4"
                android:layout_column="0"
                style="@style/ArticleText"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:id="@+id/team_member_gender"
                android:layout_column="1"
                style="@style/ArticleText"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age"
                android:id="@+id/textView5"
                android:layout_column="0"
                style="@style/ArticleText"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:id="@+id/team_member_age"
                android:layout_column="1"
                style="@style/ArticleText"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/skill"
                android:id="@+id/textView7"
                android:layout_column="0"
                style="@style/ArticleText"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/team_member_skills"
                android:layout_column="1"
                style="@style/ArticleText"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nationality"
                android:id="@+id/textView6"
                android:layout_column="0"
                style="@style/ArticleText"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/team_member_flag"
                android:layout_column="1"
                style="@style/ArticleText"
                android:layout_gravity="left" />

        </TableRow>
    </TableLayout>

</LinearLayout>